<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/nowPlayingFragment">

    <fragment
        android:id="@+id/nowPlayingFragment"
        android:name="me.polamokh.movies.ui.nowplaying.NowPlayingFragment"
        android:label="@string/now_playing"
        tools:layout="@layout/fragment_now_playing">
        <action
            android:id="@+id/action_nowPlayingFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/topRatedFragment"
        android:name="me.polamokh.movies.ui.toprated.TopRatedFragment"
        android:label="@string/top_rated"
        tools:layout="@layout/fragment_top_rated">
        <action
            android:id="@+id/action_topRatedFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="me.polamokh.movies.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:launchSingleTop="false"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="me.polamokh.movies.ui.details.DetailsFragment"
        android:label="@string/movie_details">
        <argument
            android:name="movieId"
            app:argType="integer" />
    </fragment>
</navigation>