<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:indeterminate="true" />

        <ImageView
            android:id="@+id/loading_error_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/information_icon"
            android:src="@drawable/ic_error"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/loading_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something_wrong"
            android:textAlignment="center"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/loading_error_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/retry"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/loading_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_available_movies"
            android:visibility="gone" />

    </LinearLayout>
</layout>
